# upadln

./: Cargo.toml
src/: main.rs
src/cnn/: types.rs
src/utils/: mod.rs  openvino_tensor_converter.rs
tests/yolov8n_openvino_model_fp16/: metadata.yaml  yolov8n.xml
