[package]
name = "upadln"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
openvino = { version = "0.6.0", features = ["runtime-linking"] }
log = "0.4"
opencv = { version = "0.88", features = ["clang-runtime", "imgcodecs", "imgproc"] }

[profile.release]
codegen-units = 1
strip = true
lto = true
